--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click==6.7
 colorama==0.3.9
 cryptography==2.3.1
 docutils==0.14
+ez-setup==0.9
 Flask==1.0.2
 Flask-Cors==3.0.6
 Flask-Login==0.4.1
@@ -20,6 +21,8 @@ Flask-RESTful==0.3.6
 Flask-SQLAlchemy==2.3.2
 Flask-User==1.0.1.5
 Flask-WTF==0.14.2
+GeoAlchemy==0.7.2
+GeoAlchemy2==0.5.0
 idna==2.7
 imagesize==1.1.0
 isort==4.3.4
@@ -29,6 +32,7 @@ lazy-object-proxy==1.3.1
 logzero==1.5.0
 MarkupSafe==1.0
 mccabe==0.6.1
+osmium==2.14.3
 packaging==17.1
 passlib==1.7.1
 psycopg2==2.7.5
@@ -38,6 +42,7 @@ pylint==2.1.1
 pyparsing==2.2.1
 pytz==2018.5
 requests==2.19.1
+Shapely==1.6.4.post1
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.8.0
